# flask-CI-and-CD

./: README.md  docker-compose.yml  dockerfile
.github/workflows/: dev_build.yml
app/: alembic.ini  app.py  pyproject.toml  routes.py
app/migrations/: env.py
docker/: entrypoint.sh
tests/: test_routes.py
