[tool.poetry]
name = "flask-docker"
version = "0.1.0"
description = "flask project with docker and postgres with github actions"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.6"
flask = "^2.3.2"
alembic = "^1.11.1"
flask-sqlalchemy = "^3.0.5"
flask-cors = "^4.0.0"
pytest = "^8.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = {version = "^24.4.2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
